--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -29,6 +29,18 @@
 .card-section.login-box.signup {
     height: max-content;
 }
+.password-icon-div {
+    position: absolute;
+    right: 1%;
+    top: 30%;
+    z-index: 999;
+}
+
+.password-icon-eye {
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
 
 /* responsive design */
 @media screen and (max-width:767px) {
@@ -47,6 +59,9 @@
     }
     .form-flex-wrapper.forget-btn-div .btn.forget-btn.btn-color {
         width: 100%;
+    }
+    .password-icon-div {
+        right: 3%;
     }
 }
 
