--- a/website/src/components/Forms/Forms.css
+++ b/website/src/components/Forms/Forms.css
@@ -38,6 +38,7 @@
 }
 
 .card-section {
+    width: 100%;
     height: 550px;
     background: linear-gradient(304.24deg, #F8F8FF 0%, #FFFFFF 86.71%);
     box-shadow: 0px 49px 32px -19px rgba(56, 56, 150, 0.15);
@@ -227,6 +228,7 @@ textarea:focus {
     /* display: grid;
     place-items: center; */
     cursor: pointer;
+    padding: 25px;
 }
 
 .card-section-img.inputFileUpload {
@@ -243,10 +245,17 @@ textarea:focus {
 }
 
 label.file-label {
-    font-size: 16px;
-    font-weight: 600;
     width: unset;
     cursor: pointer;
+}
+
+.form-group .file-label span {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    justify-content: center;
+    font-size: 16px;
+    font-weight: 600;
 }
 
 .photo-upload-img {
