--- a/website/src/components/Forms/Forms.css
+++ b/website/src/components/Forms/Forms.css
@@ -224,9 +224,9 @@ textarea:focus {
 
 .card-section-img {
     max-width: 100%;
-    width: 290px;
+    width: 260px;
     /* min-height: 370px; */
-    min-height: 100px;
+    min-height: 60px;
     background: #ECF2FF;
     border-radius: 20px;
     /* display: grid;
@@ -254,10 +254,11 @@ label.file-label {
 }
 
 .form-group .file-label span {
+    height: 100%;
+    width: 100%;
     display: flex;
     align-items: center;
-    gap: 10px;
-    justify-content: center;
+    gap: 5px;
     font-size: 16px;
     font-weight: 600;
 }
