--- a/website/src/components/Login/Login.css
+++ b/website/src/components/Login/Login.css
@@ -51,7 +51,7 @@
 @media screen and (max-width:767px) {
     .form-section.login-box {
         margin: 5px;
-        width: 100px;
+        width: 130px;
         min-height: 550px;
         padding-left: 0;
         padding-bottom: 50px;
@@ -67,6 +67,16 @@
     }
     .password-icon-div {
         right: 3%;
+    }
+    .form-section.login-box {
+        margin: 0;
+    }
+    .form-section .form-section-inner {
+        margin-left: 20px;
+        margin-right: 20px;
+        padding-right: 0;
+        padding-left: 0;
+        min-height: 570px;
     }
 }
 
