some changes done

--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -70,6 +70,7 @@
     }
     .form-section.login-box {
         margin: 0;
+        left: 10%;
     }
     .form-section .form-section-inner {
         margin-left: 20px;
