--- a/frontend/src/components/Admin/Admin.css
+++ b/frontend/src/components/Admin/Admin.css
@@ -10,3 +10,13 @@ table.dataTable.display tbody td:last-child {
     height: max-content;
     margin-bottom: 30px;
 }
+
+.image-container {
+    width: 120px;
+    height: 120px;
+}
+
+.image-container img {
+    width: 100%;
+    height: 100%;
+}
