half rendering logic done

--- a/frontend/src/components/Forms/Forms.css
+++ b/frontend/src/components/Forms/Forms.css
@@ -248,7 +248,7 @@ textarea:focus {
 }
 
 .card-section-img.inputFileUpload {
-    min-height: 350px;
+    min-height: max-content;
     padding: 16px;
 }
 
